[package]
name = "todoux"
version = "1.0.0"
description = "An open source & cross-platform productivity app"
authors = ["Walidoux"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/Walidoux/todoux"
default-run = "todoux"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4", features = [ "window-unmaximize", "window-maximize", "window-minimize", "window-close", "window-start-dragging", "system-tray"] }
specta = "1.0.5"
tauri-specta = { version = "1.0.2", features = ["typescript"] }

[features]
default = [ "custom-protocol" ] # When `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
custom-protocol = [ "tauri/custom-protocol" ] # Used for production builds where `devPath` points to the filesystem

[profile.release]
strip = true            # Automatically strip symbols from the binary
panic = "abort"         # Strip expensive panic clean-up logic
codegen-units = 1       # Compile crates one after another so the compiler can optimize better
lto = true              # Enables link to optimizations
opt-level = "s"         # Optimize for binary size
